--- a/B-What you need to choose/Taxation form.htm
+++ b/B-What you need to choose/Taxation form.htm
@@ -232,8 +232,8 @@
                                             <p style="text-align: justify;">Here you pay tax at the rate of 19% regardless of your income.</p>
                                             <h3 style="text-align: justify;">	Lump-sum tax on registered income</h3>
                                             <p style="text-align: justify;">This is a simplified form of taxation,  where you pay tax at a specified rate (from 2% to 17%) on your registered income in a given month.</p>
-                                            <div class="Remember">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>Lump sum on registered income taxation is available for specific types of activity only. For example, this taxation form cannot be applied, when you run a pharmacy, trade in currencies, or sell car parts. </p>
                                             </div>
                                             <h2>Comparison of taxation forms</h2>
@@ -462,8 +462,8 @@
                                             </table>
                                             <p>*)  <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term10">Podatkowa Księga Przychodów i Rozchodów<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Podatkowa Księga Przychodów i Rozchodów, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only.</span></a>, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only. It should be kept for each year separately, either on paper or in electronic form.</p>
                                             <p>Check the <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544" target="_blank">template</a> (in Polish).</p>
-                                            <div class="AFRREMEMBER">
-                                                <p>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>Once your annual revenue exceeds EUR 2 million, you are required to maintain full <a href="Accounting.htm">accounting</a> (accounting ledgers)</p>
                                             </div>
                                             <p><a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term11">Revenue register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Revenue register – it is a register of your revenues, you can keep it on paper or in electronic form, separately for each year</span></a> – is a register of your revenues, you can keep it on paper or in electronic form, separately for each year.</p>
