--- a/C-What you need to do/Open a bank account.htm
+++ b/C-What you need to do/Open a bank account.htm
@@ -227,7 +227,7 @@
 ]]></li>
                                                 <li style="text-align: justify;">a one-off value of the transaction exceeds PLN&#160;15,000, regardless of the number of payments made.</li>
                                             </ul>
-                                            <p style="text-align: justify;">Generally, you will need a bank account to pay your taxes and social security contributions. This requirement does not apply to the so-called micro-businesses. Namely, f in at least one year in the last two years you had employed fewer than 10 persons and your annual net revenue has not exceeded EUR&#160;2 million, you do not need a bank account - you can pay your taxes and social security contributions at the post office.</p>
+                                            <p style="text-align: justify;">Generally, you will need a bank account to pay your taxes and social security contributions. This requirement does not apply to the so-called micro-businesses. Namely, if in at least one year in the last two years you had employed fewer than 10 persons and your annual net revenue has not exceeded EUR&#160;2 million, you do not need a bank account - you can pay your taxes and social security contributions at the post office.</p>
                                             <p style="text-align: justify;">&#160;</p>
                                             <p style="text-align: justify;">You will need a business bank account (not your private one), if:
 </p>
